--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "ava": "^0.25.0",
     "babel-polyfill": "^6.26.0",
     "cross-env": "^5.2.0",
+    "eslint": "^5.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.1",
+    "eslint-plugin-standard": "^3.1.0",
     "nodemon": "^1.17.5",
     "nyc": "^12.0.2",
+    "prettier": "^1.13.5",
     "shx": "^0.3.0",
     "supertest": "^3.1.0"
   },
