--- a/package.json
+++ b/package.json
@@ -62,14 +62,17 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-routes-mapper": "^1.0.2",
+    "fb": "^2.0.0",
     "graphql": "^0.13.2",
     "graphql-playground-middleware-express": "^1.7.0",
     "graphql-tools": "^3.0.2",
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.3.0",
     "lodash.merge": "^4.6.1",
+    "morgan": "^1.9.0",
     "mysql2": "^1.5.3",
     "sequelize": "^4.38.0"
   }
