--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "lodash.merge": "^4.6.1",
     "morgan": "^1.9.0",
     "mysql2": "^1.5.3",
+    "randomstring": "^1.1.5",
     "sequelize": "^4.38.0"
   }
 }
