--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "fb": "^2.0.0",
     "graphql": "^0.13.2",
     "graphql-playground-middleware-express": "^1.7.0",
+    "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^3.0.2",
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.3.0",
@@ -75,6 +76,7 @@
     "morgan": "^1.9.0",
     "mysql2": "^1.5.3",
     "randomstring": "^1.1.5",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "subscriptions-transport-ws": "^0.9.12"
   }
 }
