--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "mysql2": "^1.5.3",
     "randomstring": "^1.1.5",
     "sequelize": "^4.38.0",
+    "sequelize-cli": "^4.0.0",
     "subscriptions-transport-ws": "^0.9.12"
   }
 }
