--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dumbwaiter app backend server",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node ./api/api.js",
+    "dev": "cross-env NODE_ENV=development nodemon ./api/api.js",
     "testing": "cross-env NODE_ENV=testing PORT=2018 nodemon ./api/api.js",
     "lint": "eslint ./api/. ./config/. ./test/.",
     "start": "npm run nodemon",
