--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jest": "^24.3.1",
     "nodemon": "^1.17.5",
     "nyc": "^12.0.2",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.13.5",
     "shx": "^0.3.0",
     "supertest": "^3.1.0"
