--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "start": "npm run nodemon",
     "nodemon": "nodemon --exec npm run dev",
     "prepush": "npm test; npm run drop-sqlite-db; npm run create-sqlite-db",
-    "pretest": "npm run lint",
+    "pre-commit": "npm test",
+    "pretest": "",
     "production": "cross-env NODE_ENV=production node ./api/api.js",
-    "test": "cross-env NODE_ENV=testing nyc ava",
-    "test-ci": "nyc ava --no-color"
+    "test": "cross-env NODE_ENV=testing npx jest",
+    "test-ci": "nyc ava --no-color",
+    "db:seed": "node mocks/run.js"
   },
   "babel": {
     "presets": [
-      "env"
+      "@babel/preset-env"
     ]
   },
   "ava": {
@@ -57,6 +59,8 @@
     "supertest": "^3.1.0"
   },
   "dependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "apollo-server-express": "^1.3.6",
     "atob": "^2.1.1",
     "bcrypt-nodejs": "0.0.3",
@@ -71,6 +75,7 @@
     "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^3.0.2",
     "helmet": "^3.12.1",
+    "jest": "^24.3.1",
     "jsonwebtoken": "^8.3.0",
     "lodash.merge": "^4.6.1",
     "morgan": "^1.9.0",
