--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "pre-commit": "npm test",
     "pretest": "",
     "production": "cross-env NODE_ENV=production node ./api/api.js",
-    "test": "cross-env NODE_ENV=testing jest /test",
-    "test-ci": "nyc ava --no-color"
+    "test": "cross-env NODE_ENV=testing jest ./test/. ./api/controllers/.",
+    "db:seed": "cross-env NODE_ENV=testing node ./mocks/seeds.js"
   },
   "babel": {
     "presets": [
@@ -49,7 +49,6 @@
     "nodemon": "^1.17.5",
     "pre-commit": "^1.2.2",
     "prettier": "^1.13.5",
-    "sequelize-mock": "^0.10.2",
     "shx": "^0.3.0"
   },
   "dependencies": {
